# zirofit-next

./: .cct_config.json  .env  .gitignore  ARCHITECT_PLANNING_COMPLETE.md  COMMIT_COMPLETE.md  DEVELOPMENT_COMPLETE.md  DeleteClientButton.tsx  Dockerfile.mac  Dockerfile.proxy  FIX_PLAN.md  NEEDS_ARCHITECTURAL_REVIEW.md  NEEDS_REFACTOR.md  TASKS.md  a.sh  babel.config.jest.js  docker-compose.mac.prod.yml  docker-compose.mac.yml  docker-compose.proxy.prod.yml  docker-compose.proxy.prod.yml.disabled  docker-compose.proxy.yml  docker-compose.proxy.yml.disabled  docker-compose.yml  eslint.config.mjs  jest.config.js  jest.setup.js  jest.setup.mjs  jest.setup.ts  mkdocs.yml  next.config copy.ts  next.config.js  next.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  postcss.config.mjs  project_manifest.json  pyproject.toml  repomix-output.xml  repomix.config.json  (+9 more)
.roo/: custom_modes.yaml
analyze/: nodejs.html
docs/: app_description.md  app_description_stage_2.md
documentation/: architect_master_todo.md
prisma/: schema.prisma  seed-backfill-locations.ts  seed-exercises.ts
public/: manifest.json
signals/: NEEDS_ASSISTANCE.md
src/: globals.css  i18n.ts  instrumentation.ts  middleware.test.ts  middleware.ts
tests/: singleton.ts  test-utils.tsx
todos/: architect_master_todo.md  build_error_analysis.md  clients_bulk_actions_todo.md  dashboard_phase_1_todo.md  dashboard_phase_2_todo.md  dev_todo_phase_1.md  dev_todo_phase_2.md  master_development_plan.md  notifications_phase_1_todo.md  todo.md  todo_1.md  todo_10.md  todo_11.md  (+11 more)
(+336 files in other folders)
