
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-context-tool"
version = "1.0.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A portable tool for creating and querying a vector database of a codebase."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.2",
    "tree-sitter>=0.20.0",
    "rich>=13.5.2", # For nicer console output
]

[project.scripts]
# This is the magic part. It tells pip to create an executable command.
# When a user types `cct` in their terminal, it will run the `main` function
# from the `code_context_tool.cli` module.
cct = "code_context_tool.cli:main"